Feat: provide navigation and smooth scrolling

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             </a>
             <nav class="nav header__nav">
               <ul class="header__nav-column">
-                <li class="header__nav-item menu-link">
+                <li class="header__nav-item">
                   <a
                     class="menu-font menu-font--mob menu-link"
                     href="#projects"
@@ -508,7 +508,9 @@
             <a class="logo footer-bottom__logo" href="#">
               <img class="logo-img" src="img/Logo Desktop.svg" alt="" />
             </a>
-            <p class="footer-bottom__tel menu-font">+ 45 33 22 10 77</p>
+            <a class="footer-bottom__tel menu-font" href="tel:+4533221077"
+              >+ 45 33 22 10 77</a
+            >
             <p class="footer-bottom__adress menu-font">
               Engager 3 2605<br />Brøndby Denmark
             </p>
@@ -517,40 +519,42 @@
             <li class="footer-bottom__mail-item menu-font menu-font--opacity1">
               E-mail
             </li>
-            <li class="footer-bottom__mail-item menu-font">post@monstrum.dk</li>
+            <li class="footer-bottom__mail-item">
+              <a class="menu-font" href="mailto:post@monstrum.dk"
+                >post@monstrum.dk</a
+              >
+            </li>
           </ul>
           <nav class="nav footer-bottom__nav">
             <ul>
               <li class="footer-bottom__nav-item">
-                <a class="menu-font menu-font--opacity1" href="#">Social</a>
+                <p class="menu-font menu-font--opacity1">Social</p>
               </li>
               <li class="footer-bottom__nav-item">
-                <a class="menu-font" href="#">Instagram</a>
+                <a class="menu-font menu-link" href="#">Instagram</a>
               </li>
               <li class="footer-bottom__nav-item">
-                <a class="menu-font" href="#">Facebook</a>
+                <a class="menu-font menu-link" href="#">Facebook</a>
               </li>
             </ul>
             <ul>
               <li class="footer-bottom__nav-item">
-                <a class="menu-font menu-font--opacity1" href="#projects"
-                  >Projects</a
-                >
+                <a class="menu-font menu-link" href="#projects">Projects</a>
               </li>
               <li class="footer-bottom__nav-item">
-                <a class="menu-font" href="#approach">Approach</a>
+                <a class="menu-font menu-link" href="#approach">Approach</a>
               </li>
               <li class="footer-bottom__nav-item">
-                <a class="menu-font" href="#news">News</a>
+                <a class="menu-font menu-link" href="#news">News</a>
               </li>
               <li class="footer-bottom__nav-item">
-                <a class="menu-font" href="#">About</a>
+                <a class="menu-font menu-link" href="#">About</a>
               </li>
               <li class="footer-bottom__nav-item">
-                <a class="menu-font" href="#contacts">Contact</a>
+                <a class="menu-font menu-link" href="#contacts">Contact</a>
               </li>
               <li class="footer-bottom__nav-item">
-                <a class="menu-font" href="#">Team</a>
+                <a class="menu-font menu-link" href="#">Team</a>
               </li>
             </ul>
           </nav>
