Feat: make contact-form accessible by  button

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
       </div>
     </section>
     <section
-      class="phylosophy rounded-corners rounded-corners--white"
+      class="phylosophy rounded-corners rounded-corners--neg-margin rounded-corners--white"
       id="approach"
     >
       <div class="container">
@@ -431,7 +431,7 @@
         </div>
       </div>
     </section>
-    <section class="contact-form">
+    <section class="contact-form rounded-corners">
       <header class="header">
         <div class="container">
           <div class="header__inner grid">
@@ -665,9 +665,7 @@
               a talk?
             </h2>
           </div>
-          <button class="footer__talk-btn footer__talk-btn circle-button">
-            Contact
-          </button>
+          <button class="footer__talk-btn circle-button">Contact</button>
         </div>
         <div class="footer-bottom grid">
           <div class="footer-bottom__info">
