--- a/index.html
+++ b/index.html
@@ -18,11 +18,7 @@
         <div class="container">
           <div class="header__inner grid">
             <a class="header__logo" href="#">
-              <img
-                class="logo-img logo-img--mob-sm"
-                src="img/Logo Desktop.svg"
-                alt=""
-              />
+              <img class="logo-img" src="img/Logo Desktop.svg" alt="" />
             </a>
             <nav class="nav header__nav">
               <ul class="header__nav-column">
