Feat: make contact-form section responsive

--- a/index.html
+++ b/index.html
@@ -432,15 +432,22 @@
         <div class="contact-form__inner grid">
           <div class="contact-form__content">
             <h2 class="contact-form__title headline2">
-              We&rsquo;ll<br />
-              <span class="headline2 headline2--color-text">gladly</span
-              ><br />answer<br />your<br />questions!
+              <span class="contact-form__title-span">We&rsquo;ll</span>
+              <span
+                class="contact-form__title-span headline2 headline2--color-text"
+                >gladly</span
+              >
+              <span class="contact-form__title-span">answer</span>
+              <span class="contact-form__title-span">your</span>
+              <span class="contact-form__title-span">questions!</span>
             </h2>
             <div class="contact-form__info">
               <p class="text2 text2--uppercase">
-                Engager 3<br />2605 Brøndby<br />Denmark
+                <span class="contact-form__info-span">Engager 3</span>
+                <span class="contact-form__info-span">2605 Brøndby</span>
+                <span class="contact-form__info-span">Denmark</span>
               </p>
-              <a class="text2" href="tel:+4533221077">+ 45 33 22 10 77</a><br />
+              <a class="text2" href="tel:+4533221077">+ 45 33 22 10 77</a>
               <a class="text2" href="mailto:post@monstrum.dk"
                 >post@monstrum.dk</a
               >
