Fix: replace br tags by css rules

--- a/index.html
+++ b/index.html
@@ -74,7 +74,10 @@
       </header>
       <div class="hero__content">
         <h1 class="hero__title headline1">
-          We&nbsp;create<br />playgrounds<br />sparking<br />imagination
+          <span class="hero__title-span">We&nbsp;create</span>
+          <span class="hero__title-span">playgrounds</span>
+          <span class="hero__title-span">sparking</span>
+          <span class="hero__title-span">imagination</span>
         </h1>
         <p class="hero__descr headline4">
           Based on&nbsp;visual arts and design, MONSTRUM create playgrounds that
@@ -603,7 +606,8 @@
               >+ 45 33 22 10 77</a
             >
             <p class="footer-bottom__adress menu-font">
-              Engager 3 2605<br />Brøndby Denmark
+              <span class="footer-bottom__address-span">Engager 3 2605</span>
+              <span class="footer-bottom__address-span">Brøndby Denmark</span>
             </p>
           </div>
           <ul class="footer-bottom__mail">
