Fix: correct mistakes in the word "philosophy"

--- a/index.html
+++ b/index.html
@@ -88,14 +88,14 @@
       </div>
     </section>
     <section
-      class="phylosophy rounded-corners rounded-corners--neg-margin rounded-corners--white"
+      class="philosophy rounded-corners rounded-corners--neg-margin rounded-corners--white"
       id="approach"
     >
       <div class="container">
-        <div class="phylosophy__inner section-border-line">
-          <h2 class="phylosophy__caption caption headline4">Our phylosophy</h2>
-          <div class="phylosophy__content">
-            <p class="phylosophy__text1 text1">
+        <div class="philosophy__inner section-border-line">
+          <h2 class="philosophy__caption caption headline4">Our philosophy</h2>
+          <div class="philosophy__content">
+            <p class="philosophy__text1 text1">
               The designs of&nbsp;MONSTRUM&rsquo;s playgrounds are based
               on&nbsp;stories. The playgrounds must first and foremost inspire
               children to&nbsp;play and challenge their motor skills
@@ -104,8 +104,8 @@
               sculptures in&nbsp;the urban landscape, telling stories and
               bringing a&nbsp;smile to&nbsp;peoples&rsquo; faces.
             </p>
-            <div class="phylosophy__link-wrap">
-              <a href="#" class="phylosophy__link link1">Discover approach</a>
+            <div class="philosophy__link-wrap">
+              <a href="#" class="philosophy__link link1">Discover approach</a>
             </div>
           </div>
         </div>
