Feat: add horizontal marquee in the footer

--- a/index.html
+++ b/index.html
@@ -525,8 +525,31 @@
       </div>
     </section>
     <footer class="footer rounded-corners rounded-corners--black" id="contacts">
+      <div class="marquee footer__marquee">
+        <div class="marquee__inner footer__marquee-inner">
+          <p class="marquee__text headline4 headline4--white">
+            * become an explorer of the sea * become a princess in the tower *
+            become a fish in lolypond * become a defeater of beasts * become a
+            character in history&nbsp;
+          </p>
+        </div>
+        <div class="marquee__inner footer__marquee-inner">
+          <p class="marquee__text headline4 headline4--white">
+            * become an explorer of the sea * become a princess in the tower *
+            become a fish in lolypond * become a defeater of beasts * become a
+            character in history&nbsp;
+          </p>
+        </div>
+        <div class="marquee__inner footer__marquee-inner">
+          <p class="marquee__text headline4 headline4--white">
+            * become an explorer of the sea * become a princess in the tower *
+            become a fish in lolypond * become a defeater of beasts * become a
+            character in history&nbsp;
+          </p>
+        </div>
+      </div>
+
       <div class="container">
-        <div class="footer__marquee"></div>
         <div class="footer__talk">
           <div class="footer__inner">
             <h2
